@@ -1,3 +1,10 @@
+Tue Jul 29 01:31:25 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountEditor.cpp:
+	* src/QGaimAccountEditor.h:
+	  - Updating the protocol list box on an account now updates
+	    part of the Account tab.
+
 Tue Jul 29 01:15:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountsWindow.cpp:
